[package]
name = "bklyn"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Kubernetes Heapster metric collection"
documentation = "https://softprops.github.io/bklyn"
homepage = "https://github.com/softprops/bklyn"
repository = "https://github.com/softprops/bklyn"
keywords = ["hyper", "kubernetes", "heapster"]
license = "MIT"
build = "build.rs"

[dev-dependencies]
env_logger="0.3"

[build-dependencies]
serde_codegen = "0.7"
syntex = "0.32"

[dependencies]
log = "0.3"
hyper = "0.9"
serde = "0.7"
serde_json = "0.7"
url = "1.1"